Joe and Kimiya Homework 3

--- a/Form.html
+++ b/Form.html
@@ -28,14 +28,16 @@
 
 
       <!-- here we submit to a local js file -->
-    <input type="Add Movie" value="Add Movie" onclick="formSubmitEvent()">
+    <input type="button" value="Add Movie" onclick="formSubmitEvent()">
     
     
 
 </form>
 <br><br><br>
 <button type="button" id="show">Show All</button>
-<textarea rows="10" cols="60" id="output" ></textarea>
+<div id="output">
+  
+</div>
 
 <script type="text/javascript" src="index.js"></script>
 </body>
