changing html and css

--- a/Form.html
+++ b/Form.html
@@ -8,14 +8,14 @@
 
 <body>
 
-<h2>Movie</h2>
+<h2><i>Movie</i></h2>
 
 <!-- return set to false to prevent default form submission to a URL -->
 <form name = "mainFrom" onsubmit="return false">
 
 	<fieldset id="movie">
    
-    <legend>Rating Movie</legend>
+    <legend><b>Rating Movie</b></legend><br>
    <label for="movie1"> Movie's Name:</label> 
     <input name="movie1" id="movie1" />
     
@@ -24,7 +24,7 @@
     
      <label for="year">Year:</label>
     <input name="year" id="year" />
-      <br>
+      <br><br>
 
 
       <!-- here we submit to a local js file -->
